fix: update CSS styles for body element to improve layout and readability

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 html,
 body {
-  margin: 0;
+  margin: auto;
   overflow-x: hidden;
-  max-width: 100vw;
+  max-width: 640px;
   font-family: "Ubuntu Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
